--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -404,11 +404,12 @@ jobs:
           echo "Updated pyproject.toml:"
           grep version pyproject.toml
           
-          # Build package with correct version
-          vx uv build
+          # Build package with correct version using just
+          cd ../..
+          vx just mcp-build
           
           echo "Built packages:"
-          ls -la dist/
+          ls -la packages/auroraview-mcp/dist/
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
