--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -169,15 +169,18 @@ jobs:
         if: needs.path-filter.outputs.needs_rust_checks == 'true'
         run: cargo fmt --all -- --check
 
+      - name: Install system dependencies
+        if: needs.path-filter.outputs.needs_rust_checks == 'true'
+        run: |
+          sudo apt-get update && sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libglib2.0-dev libxdo-dev pkg-config
+
       - name: Check Python formatting (ruff)
         if: needs.path-filter.outputs.python == 'true' || needs.path-filter.outputs.ci == 'true'
-        run: vx just ci-lint
+        run: vx uvx ruff check python/ tests/ && vx uvx ruff format --check python/ tests/
 
       - name: Cargo check (fast compile check)
         if: needs.path-filter.outputs.needs_rust_checks == 'true'
-        run: |
-          sudo apt-get update && sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libxdo-dev pkg-config
-          cargo check --workspace --all-features
+        run: cargo check --workspace --all-features
 
   # =============================================================================
   # Clippy - Rust linting (parallel with quick-checks)
