--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ auroraview = "auroraview.__main__:main"
 
 [tool.maturin]
 python-source = "python"
-module-name = "auroraview._core"
+# _core.pyd is now placed in auroraview/core/ subdirectory
+module-name = "auroraview.core._core"
 # Note: abi3-py38 for Python 3.8+, Python 3.7 requires separate non-abi3 build
 features = ["python-bindings", "pyo3/extension-module", "abi3-py38"]
 bindings = "pyo3"
