feat: add embedded MCP server support
Add Model Context Protocol (MCP) server integration for AI-assisted development:

- Add auroraview-mcp crate with Rust MCP server implementation

- Add Python MCP bindings (McpConfig, McpServer)

- Add default MCP tools (get_logs, clear_logs, get_webview_info)

- Add MCP dispatcher for IPC message routing

- Add documentation and examples for MCP integration

- Update Gallery demo with MCP settings

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,17 @@ code-review.md
 
 
 # Additional build artifacts
-python/auroraview/_core.*
+# Python extension modules (.pyd files) - these are build artifacts
+python/auroraview/_core.pyd
+python/auroraview/_core.pyi
+python/auroraview/_signals.pyd
+python/auroraview/_signals.pyi
+python/auroraview/mcp/_mcp.pyd
+python/auroraview/mcp/_mcp.pyi
+# Wrong location (should not exist, but ignore if accidentally created)
+python/auroraview/_mcp.pyd
+python/auroraview/_mcp.pyi
+
 target/llvm-cov/
 target/wheels/
 .qt/
