--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "crates/auroraview-plugins/fs",
     "crates/auroraview-extensions",
     "crates/auroraview-mcp",
+    "crates/auroraview-mcp-server",
     "crates/aurora-protect",
     "crates/aurora-signals",
 ]
@@ -136,6 +137,9 @@ hyper-util = { version = "0.1", features = ["full"] }
 # MCP Server (embedded)
 auroraview-mcp = { path = "crates/auroraview-mcp", optional = true }
 
+# MCP Sidecar Server (for IPC Server integration)
+auroraview-mcp-server = { path = "crates/auroraview-mcp-server", optional = true }
+
 # Template engine for JS code generation
 askama = { version = "0.15", optional = true }
 
@@ -207,6 +211,9 @@ embed-assets = ["rust-embed"]
 
 # MCP (Model Context Protocol) Server support
 mcp-server = ["auroraview-mcp", "auroraview-mcp/python"]
+
+# MCP Sidecar mode (uses external sidecar process)
+mcp-sidecar = ["auroraview-mcp-server"]
 
 # Performance features
 performance-monitoring = []
