fix(ci): use correct Python executable path for uv venv
- Fix 'No interpreter found in directory python' error
- Use sys.executable to get the correct Python path for uv venv
- Resolves Python 3.11+ test failures in CI

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -154,7 +154,10 @@ runs:
           echo "Using uv venv for Python ${{ inputs.python-version }}"
           # Use uv if available, fallback to python -m venv
           if command -v uv >/dev/null 2>&1; then
-            uv venv test-wheel-env --python python
+            # Get the current Python executable path
+            PYTHON_EXE=$(python -c "import sys; print(sys.executable)")
+            echo "Using Python executable: $PYTHON_EXE"
+            uv venv test-wheel-env --python "$PYTHON_EXE"
           else
             python -m venv test-wheel-env
           fi
