fix(ci): resolve concurrency deadlock in reusable workflows
When reusable workflows are called via workflow_call, github.workflow
becomes the parent workflow name (e.g., 'Release') instead of the
child workflow name. This caused concurrency group collisions like
'Release-refs/heads/main' between the parent workflow and all child
workflows, resulting in deadlocks.

Fix by using static workflow file names in concurrency groups instead
of the dynamic github.workflow variable:
- build-cli.yml: build-cli-*
- build-gallery.yml: build-gallery-*
- build-wheels.yml: build-wheels-*
- ci.yml: ci-*
- mcp-ci.yml: mcp-ci-*
- python-ci.yml: python-ci-*
- rust-crates-ci.yml: rust-crates-ci-*
- sdk-ci.yml: sdk-ci-*

This ensures each workflow has a unique concurrency group that doesn't
conflict with the parent Release workflow.

--- a/.github/workflows/build-gallery.yml
+++ b/.github/workflows/build-gallery.yml
@@ -9,8 +9,10 @@ on:
   workflow_call:
 
 # Cancel in-progress runs for the same workflow/ref combination
+# Use workflow file name instead of github.workflow to avoid conflicts when called from release.yml
+# When called via workflow_call, github.workflow becomes the parent workflow name (e.g., "Release")
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: build-gallery-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 permissions:
