--- a/.github/workflows/mcp-ci.yml
+++ b/.github/workflows/mcp-ci.yml
@@ -30,8 +30,10 @@ on:
 permissions:
   contents: read
 
+# Cancel in-progress runs for the same workflow/ref combination
+# Use workflow file name instead of github.workflow to avoid conflicts when called from release.yml
 concurrency:
-  group: mcp-ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+  group: mcp-ci-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
