--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -35,8 +35,10 @@ on:
 permissions:
   contents: read
 
+# Cancel in-progress runs for the same workflow/ref combination
+# Use workflow file name instead of github.workflow to avoid conflicts when called from other workflows
 concurrency:
-  group: python-ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+  group: python-ci-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: true
 
 jobs:
