fix: add _async_chat_and_emit method and remove sensitive logging
- Add _async_chat_and_emit method to AIAgent class for async chat handling

- Fix F841 lint error (unused variable future)

- Fix CodeQL security alert for sensitive API key logging

- Add noqa comments for E402 (necessary due to sys.path modification)

--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -23,6 +23,9 @@ path = "src/main.rs"
 # Core utilities and assets
 auroraview-core = { path = "../auroraview-core" }
 
+# Plugin system for built-in plugins (fs, clipboard, shell, dialog, etc.)
+auroraview-plugins = { path = "../auroraview-plugins" }
+
 # Pack functionality (via submodule)
 auroraview-pack = { path = "../../submodules/auroraview-pack", features = ["code-protection"] }
 
