--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ members = [
     "crates/auroraview-downloads",
     "crates/auroraview-settings",
     "crates/auroraview-notifications",
+    # AI Agent integration
+    "crates/auroraview-ai-agent",
     # Submodules (extensions is a full implementation)
     "submodules/auroraview-extensions",
     "submodules/auroraview-signals",
@@ -66,6 +68,15 @@ auroraview-signals = { path = "submodules/auroraview-signals" }
 # Testing framework (AI-friendly CDP-based testing)
 # Python bindings enabled via testing-python feature
 auroraview-testing = { path = "crates/auroraview-testing", optional = true }
+
+# Optional feature crates (RFC 0007 Phase 4)
+auroraview-tabs = { path = "crates/auroraview-tabs", optional = true }
+auroraview-bookmarks = { path = "crates/auroraview-bookmarks", optional = true }
+auroraview-history = { path = "crates/auroraview-history", optional = true }
+auroraview-downloads = { path = "crates/auroraview-downloads", optional = true }
+auroraview-settings = { path = "crates/auroraview-settings", optional = true }
+auroraview-notifications = { path = "crates/auroraview-notifications", optional = true }
+auroraview-devtools = { path = "crates/auroraview-devtools", optional = true }
 
 # PyO3 for Python bindings (optional)
 # multiple-pymethods: Allow splitting #[pymethods] across multiple files
@@ -224,6 +235,19 @@ embed-assets = ["rust-embed"]
 # Performance features
 performance-monitoring = []
 ipc-batching = []
+
+# Optional feature crates (RFC 0007 Phase 4)
+feature-tabs = ["dep:auroraview-tabs"]
+feature-bookmarks = ["dep:auroraview-bookmarks"]
+feature-history = ["dep:auroraview-history"]
+feature-downloads = ["dep:auroraview-downloads"]
+feature-settings = ["dep:auroraview-settings"]
+feature-notifications = ["dep:auroraview-notifications"]
+feature-devtools = ["dep:auroraview-devtools"]
+
+# Feature bundles
+features-core = ["feature-tabs", "feature-bookmarks", "feature-history", "feature-devtools"]
+features-all = ["features-core", "feature-downloads", "feature-settings", "feature-notifications"]
 
 # Integration tests (in tests/rust/ directory)
 [[test]]
